--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-analytics/data": "^5.2.1",
+    "cheerio": "^1.2.0",
     "framer-motion": "^12.23.26",
     "mongodb": "^7.0.0",
     "next": "^16.0.10",
